@@ -1,6 +1,8 @@
 
 MASTER
 
+* Coerce named scope test [Ken Collins]
+
 * Change column/view cache to happen at class level. Allows connection pool to share same
   caches as well as the ability to expire the caches when needed. Also fix change_column so 
   that exceptions are not raised when the column contains an existing default. [Ken Collins]
